--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -35,9 +35,9 @@
   "contact-form-info-content": "We created reusable react components, and modern mono repo architecture, so you can build multiple apps with common components. You can use these landing for your react app. It’s super easy to deploy, we have provided complete firebase integration it.",
   "order-page-title": "My Orderlist",
   "order-page-input-placeholder": "Search Order list",
-  "order-table-action-one": "Order Details",
-  "order-table-action-two": "Cancel Order",
-  "order-modal-heading": "Order Details",
+  "order-table-action-one": "Детали заказа",
+  "order-table-action-two": "Отменить заказ",
+  "order-modal-heading": "Детали заказа",
   "banner-healthy-vegetable-title": "Healthy vegetable that you deserve to eat fresh",
   "banner-meat-needs-title": "Meat your Needs! Don’t Forget the InstaMeat",
   "banner-thousand-grocery-title": "Thousand of best grocery items",
@@ -209,7 +209,7 @@
   "text-date": "Date",
   "text-note": "Note",
   "text-pay-cash": "Pay with cash upon delivery.",
-  "text-order-details": "Order details",
+  "text-order-details": "Детали заказа",
   "text-see-less": "See less",
   "text-pay-now": "Pay Now",
   "text-favorite-different-categories": "Here order your favorite foods from different categories",
